plugins/xpath/xpath-lang/testData/xpath/highlighting/pathTypeMismatch.xpath
<error descr="Expected type 'nodeset', got 'string'">string()</error>/a